# luachess

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  build.sh  websocket.cpp
backend/: chessboard.cpp  chessboard.h  gameStateCalculator.cpp  gameStateCalculator.h  luaController.cpp  luaController.h  piece.cpp  piece.h  room.h  tempCodeRunnerFile.h  websocket  websocket.cpp
backend/lua/: isOccupiedTest.lua  regularChess.lua
backend/lua/stub/: apiStub.lua  api_stub.lua
customchess/: package-lock.json  package.json
customchess/.next/: app-build-manifest.json  prerender-manifest.json  trace
customchess/.next/cache/: .rscinfo
customchess/.next/server/: server-reference-manifest.js  server-reference-manifest.json
customchess/.next/server/app/: page.js  page_client-reference-manifest.js
customchess/.next/server/app/page/: app-build-manifest.json
customchess/.next/server/chunks/: [root-of-the-server]__80bb4c51._.js.map  node_modules_next_11760126._.js.map
customchess/.next/server/chunks/ssr/: [root-of-the-server]__0a679080._.js  [root-of-the-server]__0a679080._.js.map  [root-of-the-server]__227ac5dd._.js  [root-of-the-server]__227ac5dd._.js.map  [root-of-the-server]__62caf16a._.js  [root-of-the-server]__62caf16a._.js.map  [root-of-the-server]__6302eb5e._.js.map  [root-of-the-server]__7d76b8b9._.js  [root-of-the-server]__7d76b8b9._.js.map  [root-of-the-server]__7d919246._.js.map  [root-of-the-server]__86e7898f._.js.map  [root-of-the-server]__8b0fa00e._.js  [root-of-the-server]__8b0fa00e._.js.map  [root-of-the-server]__8e9193ff._.js  [root-of-the-server]__8e9193ff._.js.map  [root-of-the-server]__916f1a23._.js  [root-of-the-server]__916f1a23._.js.map  [root-of-the-server]__94979971._.js  [root-of-the-server]__94979971._.js.map  [root-of-the-server]__97ebb7d5._.js  [root-of-the-server]__97ebb7d5._.js.map  [root-of-the-server]__999e0946._.js  [root-of-the-server]__999e0946._.js.map  [root-of-the-server]__d8967cc5._.js  [root-of-the-server]__d8967cc5._.js.map  node_modules_618b3959._.js.map  node_modules_8f848e63._.js.map  node_modules_b59c985a._.js.map  node_modules_bf671b14._.js.map  node_modules_next_9babd674._.js.map  node_modules_next_dist_042e99d0._.js.map  node_modules_next_dist_4b672784._.js.map  node_modules_next_dist_717b548c._.js.map  (+8 more)
customchess/.next/static/chunks/: [root-of-the-server]__8ebb6d4b._.css  [root-of-the-server]__8ebb6d4b._.css.map  _7d3d04f3._.js  _7d3d04f3._.js.map  _7ec58d34._.js  _7ec58d34._.js.map  _dcbcb41d._.js  _dcbcb41d._.js.map  _e4f74eba._.js  _e4f74eba._.js.map  node_modules_@swc_helpers_cjs_8e433861._.js.map  node_modules_f2979c3a._.js.map  node_modules_next_app_95ea274f.js.map  node_modules_next_dist_01fcdebf._.js.map  node_modules_next_dist_445d8acf._.js.map  node_modules_next_dist_7c4b9b2a._.js.map  node_modules_next_dist_ad6392d3._.js.map  node_modules_next_dist_client_20b209c9._.js.map  node_modules_next_dist_client_becf32a6._.js.map  node_modules_next_dist_compiled_0f1b9fd4._.js.map  node_modules_next_dist_compiled_ca41998d._.js.map  node_modules_next_dist_compiled_next-devtools_index_82a36480.js  node_modules_next_dist_compiled_next-devtools_index_82a36480.js.map  node_modules_next_dist_compiled_next-devtools_index_d575f738.js  node_modules_next_dist_compiled_next-devtools_index_d575f738.js.map  node_modules_next_dist_compiled_react-dom_1f56dc06._.js.map  node_modules_next_dist_shared_lib_3cbd5cc2._.js.map  node_modules_next_dist_shared_lib_492fcef6._.js.map  node_modules_next_error_8c8bf619.js.map  node_modules_react-dom_82bb97c6._.js.map  src_app_globals_css_e59ae46c._.single.css  src_app_globals_css_e59ae46c._.single.css.map  src_app_page_tsx_45a68a45._.js
customchess/src/app/: layout.tsx  page.tsx
customchess/src/app/components/: chessboard.tsx  piece.tsx
customchess/src/app/context/: WebSocketContext.tsx
customchess/src/app/games/: page.tsx
customchess/src/app/service/: socket.tsx
customchess/src/app/types/: piece.tsx
src/: Luachess.cpp  Luachess.h  Websocket.cpp  Websocket.h  actionHandler.cpp  actionHandler.h  chessboard.cpp  chessboard.h  luaController.cpp  luaController.h  room.h  utils.cpp  utils.h  websocket.cpp  websocket.h
src/Chess/: Move.h  Piece.cpp  Piece.h  chessboard.cpp  chessboard.h
src/Handlers/: ActionContext.h  Handler.cpp  Handler.h  Room.cpp  Room.h  RoomHandler.cpp  RoomHandler.h
src/Handlers/Games/: Game.cpp  Game.h  GameFactory.h  GameHandler.cpp  GameHandler.h  LuaGame.cpp  LuaGame.h  PlayerCreatedLuaGameFactory.cpp  PlayerCreatedLuaGameFactory.h  TurnOrder.cpp  TurnOrder.h  turnOrder.cpp  turnOrder.h
src/Handlers/Games/Decorator/: GameDecorator.cpp  GameDecorator.h  TurnOrderDecorator.cpp  TurnOrderDecorator.h
src/Handlers/Games/Engine/: Engine.h  LuaEngine.cpp  LuaEngine.h
src/Handlers/Rooms/: Player.h  Room.cpp  Room.h  RoomHandler.cpp  RoomHandler.h
src/lua/: regularChess.lua
src/lua/stub/: apiStub.lua
tests/: GameHandlerTests.cpp  GameTests.cpp  TurnOrderDecoratorTests.cpp  TurnOrderTests.cpp  turnOrderTests.cpp
tests/luaTestScripts/: onlyMoving.lua
(+2 files in other folders)
